[package]
name = "deca"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "CHIP-8 interpreter backend"
repository = "https://github.com/tobiasvl/deca"
documentation = "https://docs.rs/deca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.5"
itertools = "0.10"
octopt = "0.1.3"
