[package]
name = "deca"
version = "0.0.10"
authors = ["Tobias V. Langhoff <tobias@langhoff.no>"]
edition = "2021"
license = "MIT"
description = "CHIP-8 interpreter backend"
repository = "https://github.com/tobiasvl/deca"
documentation = "https://docs.rs/deca"
categories = ["emulators"]

[dependencies]
fastrand = "1.5"
itertools = "0.10"
octopt = "1.0"
